[package]
name = "deinflect"
description = "japanese deinflection"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/chronicl/deinflect"

[dependencies]
bitflags = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "bitflags/serde"]
